[metadata]
name = certbot-dns-pdns
version = 1.0.1
description = PDNS authenticator plugin for Certbot
url = https://github.com/lezgomatt/certbot-dns-vultr
author = StackTonic
author_email = alice@stacktonic.com.au
license = BSD-3
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Security
    Topic :: System :: Installation/Setup
    Topic :: System :: Networking
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
py_modules =
    certbot_dns_pdns
python_requires = >=3.6
install_requires =
  certbot
  zope.interface
  python-powerdns

[options.entry_points]
certbot.plugins =
    dns-pdns = certbot_dns_pdns:Authenticator